--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -35,12 +35,12 @@
                 <form method="POST" action="/admin/loginpost">
                     <div class="form-group">
                       <label>Username or email *</label>
-                      <input type="text" class="form-control p_input" name="email">
+                      <input type="text" class="form-control p_input" name="email" value="wg457129@gmail.com">
                     </div>
                     <div class="form-group">
                       <label>Password *</label>
                       <div class="input-group">
-                        <input type="password" class="form-control p_input" name="password" id="passwordInput" >
+                        <input type="password" class="form-control p_input" name="password" id="passwordInput" value="Admin@12" >
                         <div class="input-group-append">
                           <!-- <span class="input-group-text">
                             <input type="checkbox" onclick="togglePasswordVisibility()"> 
