--- a/views/users/address.ejs
+++ b/views/users/address.ejs
@@ -46,20 +46,24 @@
 
                 <div class="ml-5 ">
                     <div class="tab-content">
-                        <div class="">
+                        <div class="" >
                             
                             <button type="button" class="btn btn-primary mb-2" data-toggle="modal" data-target="#addAddressModal">
                                 Add Address<i class="icon-edit"></i></button>
                        
                             <% if(addresses.length == 0) { %>
-                                <p class='text-primary text-center'>No Address</p>
+                                <h4 class='text-primary text-center'>No Address, Please add a Address</h4>
                             <% }else {%>
                                     <p>The following addresses will be used on the checkout page by default.</p>
                               
                                      <div class="d-flex " style="justify-content: space-around;">
                                         <% addresses.forEach((address) => {%>
                                             <div class="card card-dashboard">
+                                                <div class="d-flex" style="justify-content: end;">
+                                                    <a class="pr-3" href="/delete-address/<%= address._id %>"><i class="icon-close"></i></a>
+                                                </div>
                                                 <div class="card-body">
+                                                    
                                                     <h3 class="card-title">Billing Address</h3><!-- End .card-title -->
                                             
                                                     <p><span class="text-primary">Name:</span> <%= address.user.name %></p>
@@ -89,30 +93,36 @@
                                         </button>
                                         </div>
                                         <div class="modal-body">
-                                        <form id="addAddressForm" action="/address" method="POST">
+                                        <form id="addAddressForm" action="/address" method="POST" onsubmit="return validate()">
                                             <div class="form-group">
                                             <label for="buildingName">Building Name</label>
-                                            <input type="text" class="form-control" id="buildingName" name="buildingName" required>
+                                            <input type="text" class="form-control" id="buildingName" name="buildingName">
+                                            <div id="buildingNameError" class="text-danger"></div>
                                             </div>
                                             <div class="form-group">
                                             <label for="mobile">Mobile</label>
-                                            <input type="text" class="form-control" id="mobile" name="mobile" required>
+                                            <input type="text" class="form-control" id="mobile" name="mobile">
+                                            <div id="mobilenoError" class="text-danger"></div>
                                             </div>
                                             <div class="form-group">
                                             <label for="district">District</label>
-                                            <input type="text" class="form-control" id="district" name="district" required>
+                                            <input type="text" class="form-control" id="district" name="district">
+                                            <div id="districtError" class="text-danger"></div>
                                             </div>
                                             <div class="form-group">
                                             <label for="city">City</label>
-                                            <input type="text" class="form-control" id="city" name="city" required>
+                                            <input type="text" class="form-control" id="city" name="city">
+                                            <div id="cityError" class="text-danger"></div>
                                             </div>
                                             <div class="form-group">
                                             <label for="state">State</label>
-                                            <input type="text" class="form-control" id="state" name="state" required>
+                                            <input type="text" class="form-control" id="state" name="state">
+                                            <div id="stateError" class="text-danger"></div>
                                             </div>
                                             <div class="form-group">
                                             <label for="pincode">Pincode</label>
-                                            <input type="text" class="form-control" id="pincode" name="pincode" required>
+                                            <input type="text" class="form-control" id="pincode" name="pincode">
+                                            <div id="pincodeError" class="text-danger"></div>
                                             </div>
                                             <button type="submit" class="btn btn-primary">Add Address</button>
                                         </form>
@@ -134,6 +144,70 @@
 <%- include('../layout/allfooter.ejs') %>
 </div><!-- End .page-wrapper -->
 <button id="scroll-top" title="Back to Top"><i class="icon-arrow-up"></i></button>
+
+
+<%- include('../layout/mobile.ejs') %>
+
+
+<script>
+    function validate(){
+        let buildingName = document.getElementById('buildingName').value.trim();
+        let mobile = document.getElementById('mobile').value.trim();
+        let district = document.getElementById('district').value.trim();
+        let city = document.getElementById('city').value.trim();
+        let state = document.getElementById('state').value.trim();
+        let pincode = document.getElementById('pincode').value.trim();
+
+
+        let buildingNameError = document.getElementById('buildingNameError');
+        let mobilenoError = document.getElementById('mobilenoError');
+        let districtError = document.getElementById('districtError');
+        let cityError = document.getElementById('cityError');
+        let stateError = document.getElementById('stateError');
+        let pincodeError = document.getElementById('pincodeError');
+
+        buildingNameError.textContent = '';
+        mobilenoError.textContent = '';
+        districtError.textContent = '';
+        cityError.textContent = '';
+        stateError.textContent = '';
+        pincodeError.textContent = '';
+
+        let isValid = true;
+
+        if(buildingName === ''){
+            buildingNameError.textContent = "Please Enter Your BuildingName"
+            isValid = false
+        }
+
+        if (!/^\d{10}$/.test(mobile)) {
+            mobilenoError.textContent = 'Please enter a valid 10-digit mobile number.';
+            isValid = false;
+        }
+
+        if(district === ''){
+            districtError.textContent = "Please Enter Your District"
+            isValid = false
+        }
+
+        if(city === ''){
+            cityError.textContent = "Please Enter Your City"
+            isValid = false
+        }
+
+        if(state === ''){
+            stateError.textContent = "Please Enter Your State"
+            isValid = false
+        }
+        if (!/^\d{6}$/.test(pincode)) {
+            pincodeError.textContent = 'Please enter a valid 6-digit  Pincode.';
+            isValid = false;
+        }
+
+        return isValid;
+
+    }
+</script>
 
 <!-- Plugins JS File -->
 <script src="assets/js/jquery.min.js"></script>
