--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -27,36 +27,40 @@
                                     <tr>
                                         <th>Product</th>
                                         <th>Price</th>
+                                        <th>Discount Price</th>
                                         <th>Quantity</th>
                                         <th>Total</th>
                                         <th></th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <% cartProducts[0].Products.forEach(product => { %>
+                                    <% cartProducts[0].products.forEach(product => { %>
                                         <tr>
                                             <td class="product-col">
-                                                <div class="product">
+                                                <div class="product" >
                                                     <figure class="product-media">
-                                                        <img src="<%= product.images[0] %>" alt="Product image">
+                                                        <% if (product.images && product.images.length > 0) { %>
+                                                            <img src="<%= product.images[0] %>" alt="Product image">
+                                                        <% } %>
                                                     </figure>
                                                     <h3 class="product-title">
-                                                        <a href="#"><%= product.name %></a>
+                                                        <a href="/product/<%= product.product._id %>"><%= product.product.name %></a>
                                                     </h3>
                                                 </div>
                                             </td>
-                                            <td class="price-col">₹<%= product.price %></td>
+                                            <td class="price-col">₹<%= product.product.price %></td>
+                                            <td class="price-col">₹<%= product.product.discount %></td>
                                             <td class="quantity-col">
                                                 <div class="cart-product-quantity">
-                                                    <input type="number" class="form-control" value="<%= product.quantity %>" min="1" max="10" step="1" data-decimals="0" required>
+                                                    <input type="number" class="form-control quantity-input" value="<%= product.quantity %>" data-product-id="<%= product.product._id %>" name="quantity" min="1" max="<%= product.product.quantity %>" step="1" data-decimals="0" required>
                                                 </div>
                                             </td>
-                                            <td class="total-col">₹<%= product.total %></td>
+                                            <td class="total-col">₹<%= product.subtotal %></td>
                                             <td class="remove-col"><a href="/cart/remove?productId=<%= product._id %>"><i class="icon-close"></i></a></td>
-
                                         </tr>
                                     <% }); %>
                                 </tbody>
+                                
                             </table>
     
                             <div class="cart-bottom">
@@ -82,7 +86,7 @@
                                     <tbody>
                                         <tr class="summary-subtotal">
                                             <td>Subtotal:</td>
-                                            <td>₹<%= cartProducts.grandTotal %></td>
+                                            <td>₹<%= cartProducts[0].grandTotal %></td>
                                         </tr><!-- End .summary-subtotal -->
                                         <tr class="summary-shipping">
                                             <td>Shipping:</td>
@@ -99,25 +103,25 @@
                                             <td>₹0.00</td>
                                         </tr><!-- End .summary-shipping-row -->
     
-                                        <tr class="summary-shipping-row">
+                                        <!-- <tr class="summary-shipping-row">
                                             <td>
                                                 <div class="custom-control custom-radio">
                                                     <input type="radio" id="standart-shipping" name="shipping" class="custom-control-input">
                                                     <label class="custom-control-label" for="standart-shipping">Standart:</label>
-                                                </div><!-- End .custom-control -->
+                                                </div> End .custom-control 
                                             </td>
                                             <td>₹0.00</td>
-                                        </tr><!-- End .summary-shipping-row -->
+                                        </tr> End .summary-shipping-row 
     
                                         <tr class="summary-shipping-row">
                                             <td>
                                                 <div class="custom-control custom-radio">
                                                     <input type="radio" id="express-shipping" name="shipping" class="custom-control-input">
                                                     <label class="custom-control-label" for="express-shipping">Express:</label>
-                                                </div><!-- End .custom-control -->
+                                                </div> End .custom-control 
                                             </td>
                                             <td>₹0.00</td>
-                                        </tr><!-- End .summary-shipping-row -->
+                                        </tr>End .summary-shipping-row -->
     
                                         <tr class="summary-shipping-estimate">
                                             <td>Estimate for Your Country<br> <a href="/address">Change address</a></td>
@@ -126,7 +130,7 @@
     
                                         <tr class="summary-total">
                                             <td>Total:</td>
-                                            <td>₹<%= cartProducts.grandTotal %></td> 
+                                            <td>₹<%= cartProducts[0].grandTotal %></td> 
                                         </tr><!-- End .summary-total -->
                                     </tbody>
                                 </table><!-- End .table table-summary -->
@@ -154,6 +158,35 @@
 
 <%- include('../layout/mobile.ejs') %>
 
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+    const quantityInputs = document.querySelectorAll('.quantity-input');
+
+    quantityInputs.forEach(input => {
+        input.addEventListener('change', async (event) => {
+            const productId = event.target.dataset.productId;
+            const newQuantity = event.target.value;
+
+            try {
+                const response = await fetch(`/updateQuantity?productId=${productId}&quantity=${newQuantity}`, {
+                    method: 'PUT'
+                });
+
+                if (response.ok) {
+                    const data = await response.json();
+                    const subtotalCell = document.querySelector(`.subtotal-cell-${productId}`);
+                    subtotalCell.textContent = `₹${data.subtotal}`;
+                } else {
+                    console.error('Failed to update quantity');
+                }
+            } catch (error) {
+                console.error('Error:', error);
+            }
+        });
+    });
+});
+</script>
+
 
  <!-- Plugins JS File -->
  <script src="assets/js/jquery.min.js"></script>
@@ -165,6 +198,7 @@
  <script src="assets/js/bootstrap-input-spinner.js"></script>
  <!-- Main JS File -->
  <script src="assets/js/main.js"></script>
+
 
 
 <%- include('../layout/footer.ejs') %>
